--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-$primary-color: #282c34;
+$primary-color: #28a745;
 $background-color: #f5f5f5;
 $text-color: #333;
 $font-family: Arial, sans-serif;
